kubernetes/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: chaieb-farikou-diomande
spec:
  replicas: 3
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: europe-west1-docker.pkg.dev/polytech-dijon/polytech-dijon/projet-consumer:moussa-amen
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "4m"
            memory: "32Mi"
