kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: chaieb-farikou-diomande
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.2-alpine
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "4m"
            memory: "32Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: chaieb-farikou-diomande
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
